--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -262,8 +262,9 @@
       padding: 0;
 
       .product_img {
-          height: 286px;
-          width: 100%;
+         height: 330px;
+         width: 100%;
+         object-fit: cover;
       }
 
       &:nth-child(1) {
