--- a/src/components/products/product.scss
+++ b/src/components/products/product.scss
@@ -23,12 +23,14 @@
 .product_bgc {
   background: url(http://michikiri.com/img/common/bg_pattern_01.png);
   padding: 28px 20px 60px;
+
   .product_list {
     width: 100%;
     margin-top: 70px;
+
     .product {
       width: 50%;
-      height: 300px;
+      height: 350px;
       padding: 20px;
       width: 50%;
       height: 300px;
@@ -40,7 +42,7 @@
     }
 
     .left {
-      width: 50%;
+      width: 100%;
       display: inline-block;
 
       .img_wrap {
@@ -91,12 +93,13 @@
           width: 100%;
           width: 280px;
           height: 280px;
+          object-fit: cover;
         }
       }
     }
 
     .right {
-      width: 50%;
+      width: 100%;
       display: inline-block;
       position: relative;
 
@@ -106,8 +109,7 @@
         left: -53px;
         width: 78px;
         height: 68px;
-        background: url(http://michikiri.com/img/common/icon_balloon_01.png)
-          no-repeat left top;
+        background: url(http://michikiri.com/img/common/icon_balloon_01.png) no-repeat left top;
         background-size: 78px auto;
         color: #fff;
         font-weight: bold;
@@ -120,10 +122,9 @@
         display: inline;
         font-size: 18px;
         font-weight: bold;
-        background: url(http://michikiri.com/img/common/bg_link_01.png)
-          no-repeat bottom;
+        background: url(http://michikiri.com/img/common/bg_link_01.png) no-repeat bottom;
         background-size: 100% auto;
-        padding: 17px 16px 10px 0;
+        padding: 17px 16px 10px 15px;
         line-height: 1.7;
         opacity: 1;
         color: black;
@@ -131,7 +132,7 @@
 
       .product_content {
         margin-top: 5px;
-        padding: 15px;
+        padding: 20px 25px;
         color: black;
         font-weight: normal;
 
@@ -145,17 +146,35 @@
 
 
 
-.ProductDetails{
+.ProductDetails {
   text-align: center;
-  .card_wrap{
+
+  .card_wrap {
     padding: 20px;
-    .card-img-img{
-      width: 300px;
+    width: 50%;
+    margin: auto;
+
+    .card-img-img {
+      width: 100%;
       height: 400px;
       margin: auto;
-      img{
+
+      img {
         width: 100%;
         height: 100%;
+      }
+    }
+  }
+}
+
+@media (max-width: 980px) {
+  .product_bgc {
+    .product_list {
+      .product {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        height: auto;
       }
     }
   }
